IKASAN-2745 adding ci profile with flakey travis tests ignored. We can revisit when appropriate.